# nacp_secrets

./: .gitignore  README.md  download.py  pyproject.toml  requirements.txt  update_schema.py  validate_declaration.py
models/: declaration.py  general.py
models/steps/: s00_type_of_declaration.py  s01_subject_info.py  s02_family_members.py  s03_real_estate.py  s04_unfinished_constructions.py  s05_movable_property.py  s06_vehicle.py  s07_securities.py  s08_corporate_rights.py  s09_trusts_legal_entity.py  s10_intangible_assets.py  s11_income_and_gifts.py  s12_cash_assets.py  s13_financial_liabilities.py  s14_expenses_and_transactions.py  s15_part_time_job.py  s16_membership.py  s17_banks.py
web/: index.html  schema.json
